--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,14 @@ body {
     color: #333;
 }
 
+
 header {
-    background: #1e3a5f;
+    background: #fdd3e1;
     color: white;
     padding: 20px;
     text-align: center;
 }
+
 
 nav ul {
     list-style: none;
@@ -19,16 +21,19 @@ nav ul {
     text-align: center;
 }
 
+
 nav ul li {
     display: inline;
     margin: 0 15px;
 }
+
 
 nav ul li a {
     text-decoration: none;
     color: white;
     font-weight: bold;
 }
+
 
 main {
     max-width: 800px;
@@ -39,10 +44,11 @@ main {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+
 footer {
     text-align: center;
     padding: 10px;
-    background: #1e3a5f;
+    background: #a2a2db;
     color: white;
     position: fixed;
     bottom: 0;
