--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,19 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
+    min-height: 100vh; 
+    display: flex;
+    flex-direction: column;
 }
 
 
 header {
     background: #fdd3e1;
     color: white;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
+    position: fixed;
+    width: 100%; 
 }
 
 
@@ -37,11 +42,12 @@ nav ul li a {
 
 main {
     max-width: 800px;
-    margin: 20px auto;
+    margin:175px auto 20px auto;
     background: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 150px;
 }
 
 
@@ -50,7 +56,6 @@ footer {
     padding: 10px;
     background: #a2a2db;
     color: white;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }
