--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,8 @@ nav {
     background-color: #ffb6c1; /* Color rosado de fondo */
     margin-bottom: 1%; /* Margen inferior del 1% */
     margin-top: 2%; /* Margen superior del 2% */
-    margin-right: 10%; /* Margen derecho del 10% */
-    margin-left: 10%; /* Margen izquierdo del 10% */
+    margin-right: 5%; /* Margen derecho del 10% */
+    margin-left: 5%; /* Margen izquierdo del 10% */
     padding: 2px 0; /* Espaciado interno de 20px arriba y abajo */
     border-radius: 10px; /* Bordes redondeados */
 }
@@ -56,7 +56,8 @@ nav ul li {
 nav ul li a:hover {
     background-color: #d9edf4; /* Cambia el fondo a azul claro cuando se pasa el mouse */
     color: #003366; /* Cambia el texto a blanco */
-    border-radius: 1px; /* Bordes redondeados al hacer hover */
+    border-radius: 5px; /* Bordes redondeados al hacer hover */
+    padding: 10px;
 }
 
 /*ENLACES DENTRO DEL MENÚ*/
@@ -65,6 +66,18 @@ nav ul li a {
     color: White; /* Color de texto en blanco */
     padding: 30px 3.312px; /* Añade relleno alrededor del texto */
 }
+
+nav ul li a.active {
+    color: #ffffff;
+    background-color: #f796a5; /* Un poco más oscuro el fondo */
+    border-radius: 5px; /* Bordes redondeados al hacer hover */
+    padding: 10px;
+}
+/*ESTILO PRESU*/
+.presupuesto-general{
+    margin-bottom: 5px;
+}
+
 
 /* SECCIÓN PRINCIPAL */
 main {
@@ -94,7 +107,6 @@ main h3{
 /* PIÉ DE PÁGINA */
 footer {
     text-align: center; /* Centra el texto dentro del pie de página */
-    padding: 20px; /* Añade un espaciado interno de 20px alrededor del contenido */
     background: #a2a2db; /* Establece el color de fondo del pie de página en azul */
     color: white; /* Establece el color del texto en blanco */
     position: relative; /* Permite que el footer se ajuste correctamente a la parte inferior de la página */
@@ -108,15 +120,6 @@ footer {
     padding: 10px; /* Añade un espaciado interno de 10px alrededor del contenido dentro del contenedor */
 }
 
-.footer-logo {
-    margin-bottom: 10px; /* Añade un margen inferior de 15px para separar el logo de los demás elementos */
-}
-
-.footer-logo img {
-    max-width: 150px; /* Limita el tamaño máximo del logo a 150px de ancho */
-    height: auto; /* Mantiene la proporción original de la imagen (es decir, ajusta la altura automáticamente según el ancho) */
-}
-
 .footer-contact a {
     font-family: 'NowRegular';
     color: white; /* Establece el color de los enlaces en blanco */
@@ -128,14 +131,12 @@ footer {
 }
 
 .footer-rights {
-    margin-top: 20px; /* Añade un margen superior de 20px para separar la sección de derechos de autor de lo demás */
     font-size: 0.9em; /* Establece el tamaño de la fuente en 0.9 veces el tamaño normal */
     color: #f1f1f1; /* Establece el color del texto en un gris claro */
 }
 
 .footer-rights p {
     font-family: 'NowRegular';
-    margin: 5px 0; /* Añade un margen de 5px arriba y abajo de cada párrafo, pero no a los lados */
 }
 
 /*IMÁGENES DENTRO DEL MAIN*/
