--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,11 @@ body {
 
 /*ENCABEZADO*/
 header {
-    background: #fdd3e1; /* Fondo rosado */
+    background-image: url('../imagenes/header.png'); /* Ruta de tu imagen */
+    background-size: cover; /* Ajusta la imagen para cubrir todo el header */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que se repita la imagen */
+    /*background: #fdd3e1; /* Fondo rosado */
     padding: 15px; /* Espaciado interno */
     text-align: center; /* Centra el contenido */
     position: fixed; /* Mantiene el header fijo en la parte superior */
@@ -112,31 +116,44 @@ footer {
     position: relative; /* Permite que el footer se ajuste correctamente a la parte inferior de la página */
     width: 100%; /* Hace que el pie de página ocupe todo el ancho de la pantalla */
     bottom: 0; /* Coloca el footer al fondo de la página */
+    padding: 0px 0; /* Menos alto que antes */
 }
 
 .footer-container {
     max-width: 1200px; /* Limita el ancho del contenido dentro del footer a 1200px */
     margin: 0 auto; /* Centra el contenedor de contenido en la pantalla */
-    padding: 10px; /* Añade un espaciado interno de 10px alrededor del contenido dentro del contenedor */
+    padding: 5px 10px;/* Añade un espaciado interno alrededor del contenido dentro del contenedor */
+    gap: 5px; /* Espacio entre los elementos dentro del contenedor */
+    display: flex; /* Usa Flexbox para organizar los elementos dentro del contenedor */
+    flex-direction: column; /* Organiza los elementos en una columna */
+    align-items: center; /* Centra los elementos dentro del contenedor */
 }
 
 .footer-contact a {
     font-family: 'NowRegular';
     color: white; /* Establece el color de los enlaces en blanco */
     text-decoration: none; /* Elimina el subrayado por defecto de los enlaces */
+    margin: 0; /* Elimina el margen por defecto */
 }
 
 .footer-contact a:hover {
     text-decoration: underline; /* Al pasar el cursor sobre el enlace, se subraya el texto */
 }
+.footer-logo img {
+    max-height: 60px; /* Reduce el tamaño del logo */
+    width: auto;
+    margin: 0; /* Elimina el margen por defecto */
+}
 
 .footer-rights {
     font-size: 0.9em; /* Establece el tamaño de la fuente en 0.9 veces el tamaño normal */
     color: #f1f1f1; /* Establece el color del texto en un gris claro */
+    margin: 0; /* Elimina el margen por defecto */
 }
 
 .footer-rights p {
     font-family: 'NowRegular';
+    margin: 0; /* Elimina el margen por defecto */
 }
 
 /*IMÁGENES DENTRO DEL MAIN*/
