--- a/css/tareasStyle.css
+++ b/css/tareasStyle.css
@@ -1,6 +1,4 @@
 
-
-
 table-tareas{
     width: 100%;
     border-collapse: collapse;
@@ -33,19 +31,19 @@ tr:not(.fase) {
 
 /*Tablas con el cronograma de los 4 meses*/
 
-.cronograma {
-    width: 100%;
-    margin: auto;
-    margin-left: -33%;
-    border-collapse: collapse;
-    table-layout: fixed;
+h3{
+    font-family: 'YoungSerifRegular';
+    font-size: 22px;
+    text-align: center;
 }
 
-.cronograma_Center {
-    width: 100%;
-    margin: auto;
+.cronograma {
+    width: 97%;
+    margin: 0 auto;
     border-collapse: collapse;
     table-layout: fixed;
+    margin-bottom: 20px;
+
 }
 
 .cronograma th, .cronograma td {
@@ -57,6 +55,7 @@ tr:not(.fase) {
 .header_dia {
     background-color: #f8c8dc;
     width: 50px; 
+    height: 50px;
 
    
 }
@@ -73,20 +72,21 @@ tr:not(.fase) {
 /*MORADO*/
 .mes-header-morado{
     background-color: #cacef3;
+   
     
 }
 
 .dia-header-morado {
-    background-color: #cacef3;
+    background-color: #e2e4f4;
     font-weight: bold;
     text-align: center;
-    width: 10px; 
+    width: 70px; 
     
 }
 
 .dia-morado{
     background-color: #cacef3;
-    width: 10px; 
+    width: 70px; 
 }
 
 /*AMARILLO*/
@@ -95,7 +95,7 @@ tr:not(.fase) {
 }
 
 .dia-header-amarillo {
-    background-color: #fff2cc;
+    background-color: #f4eddb;
     font-weight: bold;
     text-align: center;
     width: 10px; 
@@ -111,7 +111,7 @@ tr:not(.fase) {
 }
 
 .dia-header-azul {
-    background-color: #d2f7f9;
+    background-color: #ebf5f5;
     font-weight: bold;
     text-align: center;
     width: 50px; 
